<resources>
    <string name="app_name">Task Manager</string>
    <string name="add_new_task">Add New Task</string>
    <string name="title_required">Title*</string>
    <string name="description_required">Description*</string>
    <string name="add">Add</string>
    <string name="title_required_message">Title field is required!</string>
    <string name="description_required_message">Description field is required!</string>
    <string name="wrong_input_time">Please select a future time.</string>
    <string name="error">Something went wrong.</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="update_task">Update Task</string>
    <string name="update">Update</string>
    <string name="changeTime">Change Time</string>
    <string name="added">Added</string>
    <string name="Updated">Updated!</string>
    <string name="remove_task">Remove Task</string>
    <string name="no_task_to_show">Nothing to show!</string>
    <string name="remove_task_message">Are you sure you want to remove this task?</string>
    <string name="notificationContent">Hey! its time to do this task: %s</string>
    <string name="night_mode">Night Mode</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
</resources>